add logic for optimization style tag injection. according to content

--- a/src/components/Accordion/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion/Accordion.module.scss
@@ -4,8 +4,7 @@
 
 .accordion {
   height: fit-content;
-  border: 1px solid;
-  @include theme-prop(border-color, ui-border-color);
+  border: 1px solid var(--ui-border-color);
   box-sizing: border-box;
   border-radius: $border-radius-small;
 }
