--- a/src/components/Tipseen/Tipseen.module.scss
+++ b/src/components/Tipseen/Tipseen.module.scss
@@ -5,11 +5,11 @@
 .tipseenWrapper {
   min-width: 100px;
   min-height: 40px;
-  padding: 0;
-  border-radius: var(--border-radius-medium);
+  --tooltip-padding: 0;
+  --tooltip-border-radius: var(--border-radius-medium);
 
   &WithoutCustomWidth {
-    max-width: 320px;
+    --tooltip-max-width: 320px;
   }
 
   .tipseen {
