fix: <ModalHeader> revert changes to margin-block-start

--- a/src/components/Modal/ModalHeader/ModalHeader.module.scss
+++ b/src/components/Modal/ModalHeader/ModalHeader.module.scss
@@ -9,6 +9,7 @@
   .title {
     @include font-title();
     color: var(--primary-text-color);
+    margin-block-start: var(--spacing-large);
     margin-block-end: 0;
     width: calc(100% - 32px);
   }
