--- a/src/components/MultiStepIndicator/MultiStepIndicator.module.scss
+++ b/src/components/MultiStepIndicator/MultiStepIndicator.module.scss
@@ -9,4 +9,12 @@
   margin: 16px;
   height: 1px;
   width: 48px;
+
+  &.compact {
+    width: 16px;
+    margin-left: var(--spacing-xs);
+    margin-right: var(--spacing-xs);
+    padding-left: var(--spacing-xs);
+    padding-right: var(--spacing-xs);
+  }
 }
