--- a/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.module.scss
+++ b/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.module.scss
@@ -13,7 +13,6 @@
   list-style-type: none;
 }
 
-
 .textContainer {
   display: flex;
   flex-direction: column;
@@ -85,6 +84,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &.statusActiveNumberDividerContainer {
+    width: 40px;
+  }
 }
 
 .indicator.clickable {
@@ -195,11 +198,6 @@
 .modeCompactNumberContainer {
   width: 28px;
   height: 28px;
-
-  &.statusActiveNumberContainer {
-    margin-left: var(--spacing-small);
-    margin-right: var(--spacing-xs);
-  }
 }
 
 .statusPendingNumberContainer {
