Change title font-size to 14 and font-weight to 600

--- a/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
+++ b/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
@@ -27,7 +27,8 @@
 
       &__text {
         font: var(--font-h5);
-        font-weight: 700;
+        font-size: 14px;
+        font-weight: 600;
         line-height: 20px;
         @include theme-prop(color, primary-text-color);
         margin-bottom: 2px;
