--- a/src/components/MultiStepIndicator/MultiStepIndicator.module.scss
+++ b/src/components/MultiStepIndicator/MultiStepIndicator.module.scss
@@ -11,8 +11,9 @@
   width: 48px;
 
   &.compact {
-    width: 16px;
-    margin-left: var(--spacing-small);
-    margin-right: var(--spacing-small);
+    max-width: 34px;
+    min-width: 16px;
+    margin-inline-start: var(--spacing-small);
+    margin-inline-end: var(--spacing-small);
   }
 }
