added compact mode to MultiStepIndicator component (#1352)
* added compact mode to MultiStepIndicator component

* test [prerelease]

* adjust divider spacing

* review fixes

* update snapshot test with the review fixes changes

* adjust max size stepper divider to 40px

* design review fixes

--- a/src/components/MultiStepIndicator/MultiStepIndicator.module.scss
+++ b/src/components/MultiStepIndicator/MultiStepIndicator.module.scss
@@ -9,4 +9,11 @@
   margin: 16px;
   height: 1px;
   width: 48px;
+
+  &.compact {
+    max-width: 40px;
+    min-width: 16px;
+    margin-inline-start: var(--spacing-small);
+    margin-inline-end: var(--spacing-small);
+  }
 }
