--- a/src/config/maps/core/_core-typography-map.scss
+++ b/src/config/maps/core/_core-typography-map.scss
@@ -3,35 +3,30 @@
 // - Maps include Font scope tokens.
 // - Maps are collected into the $core-settings-map and are interpolated into custom properties.
 
-$core-typography-font-sizes-map: (
-  font-size-h1: $font-size-h1,
-  font-size-h2: $font-size-h2,
-  font-size-h3: $font-size-h3,
-  font-size-h4: $font-size-h4,
-  font-size-h5: $font-size-h5,
-  font-size-general-label: $font-size-general-label,
-  font-size-paragraph: $font-size-paragraph,
-  font-size-subtext: $font-size-subtext
-);
-
-$core-typography-line-height-sizes-map: (
-  font-line-height-h1: $font-line-height-h1,
-  font-line-height-h2: $font-line-height-h2,
-  font-line-height-h3: $font-line-height-h3,
-  font-line-height-h4: $font-line-height-h4,
-  font-line-height-h5: $font-line-height-h5,
-  font-line-height-general-label: $font-line-height-general-label,
-  font-line-height-paragraph: $font-line-height-paragraph,
-  font-line-height-subtext: $font-line-height-subtext
-);
-
 $core-typography-fonts-map: (
-  font-h1: $font-h1,
-  font-h2: $font-h2,
-  font-h3: $font-h3,
-  font-h4: $font-h4,
-  font-h5: $font-h5,
-  font-general-label: $font-general-label,
-  font-paragraph: $font-paragraph,
-  font-subtext: $font-subtext
+  font-h1-bold: $font-h1-bold,
+  font-h1-normal: $font-h1-normal,
+  font-h1-light: $font-h1-light,
+  font-h2-bold: $font-h2-bold,
+  font-h2-normal: $font-h2-normal,
+  font-h2-light: $font-h2-light,
+  font-h3-bold: $font-h3-bold,
+  font-h3-normal: $font-h3-normal,
+  font-h3-light: $font-h3-light,
+  font-text1-bold: $font-text1-bold,
+  font-text1-normal: $font-text1-normal,
+  font-text2-bold: $font-text2-bold,
+  font-text2-normal: $font-text2-normal
+);
+
+$core-typography-letter-spacing-map: (
+  letter-spacing-h1-bold: $letter-spacing-h1-bold,
+  letter-spacing-h1-normal: $letter-spacing-h1-normal,
+  letter-spacing-h1-light: $letter-spacing-h1-light,
+  letter-spacing-h2-bold: $letter-spacing-h2-bold,
+  letter-spacing-h2-normal: $letter-spacing-h2-normal,
+  letter-spacing-h2-light: $letter-spacing-h2-light,
+  letter-spacing-h3-bold: $letter-spacing-h3-bold,
+  letter-spacing-h3-normal: $letter-spacing-h3-normal,
+  letter-spacing-h3-light: $letter-spacing-h3-light
 );
