--- a/src/config/tokens/core/_core-typography.scss
+++ b/src/config/tokens/core/_core-typography.scss
@@ -1,52 +1,35 @@
 // CORE TOKENS: TYPOGRAPHY
 // This partial Defines Global Typography tokens
 
-// FONTS SCALES
-// - Font Size scale
-$font-size-10: $font-reg-size-14;
-$font-size-20: $font-reg-size-14;
-$font-size-30: $font-size-base;
-$font-size-40: $font-reg-size-18;
-$font-size-50: $font-reg-size-24;
-$font-size-60: $font-reg-size-30;
+// Font family
+$font-family-english-heading: "Poppins";
+$font-family-english-text: "Figtree";
+$font-family-other-languages: "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+$text-font-family: $font-family-english-text, $font-family-other-languages;
+$title-font-family: $font-family-english-heading, $font-family-other-languages;
 
-// - LINE HEIGHT SCALE
-$font-line-height-10: $font-reg-line-height-18;
-$font-line-height-20: $font-reg-line-height-24;
-$font-line-height-30: $font-reg-line-height-24;
-$font-line-height-40: $font-reg-line-height-24;
-$font-line-height-50: $font-reg-line-height-32;
-$font-line-height-60: $font-reg-line-height-42;
+// Font definition shorthands per semantics atom definitions
+$font-h1-bold: 700 32px/40px $title-font-family;
+$font-h1-normal: 500 32px/40px $title-font-family;
+$font-h1-light: 300 24px/30px $title-font-family;
+$font-h2-bold: 700 24px/30px $title-font-family;
+$font-h2-normal: 500 24px/30px $title-font-family;
+$font-h2-light: 300 18px/24px $title-font-family;
+$font-h3-bold: 600 18px/30px $title-font-family;
+$font-h3-normal: 500 18px/30px $title-font-family;
+$font-h3-light: 300 18px/24px $title-font-family;
+$font-text1-bold: 700 16px/40px $title-font-family;
+$font-text1-normal: 500 16px/40px $title-font-family;
+$font-text2-bold: 700 14px/24px $text-font-family;
+$font-text2-normal: 500 14px/24px $text-font-family;
 
-// TYPOGRAPHY TOKENS
-// - Font sizes (meaningful units)
-$font-size-h1: var(--font-size-60);
-$font-size-h2: var(--font-size-50);
-$font-size-h3: var(--font-size-50);
-$font-size-h4: var(--font-size-40);
-$font-size-h5: var(--font-size-30);
-$font-size-general-label: var(--font-size-20);
-$font-size-paragraph: var(--font-size-30);
-$font-size-subtext: var(--font-size-10);
-
-// - Line heights (meaningful units)
-$font-line-height-h1: var(--font-line-height-60);
-$font-line-height-h2: var(--font-line-height-50);
-$font-line-height-h3: var(--font-line-height-50);
-$font-line-height-h4: var(--font-line-height-40);
-$font-line-height-h5: var(--font-line-height-30);
-$font-line-height-general-label: var(--font-line-height-20);
-$font-line-height-paragraph: var(--font-line-height-30);
-$font-line-height-subtext: var(--font-line-height-10);
-
-// - Font definition shorthands per semantics atom definitions
-$font-h1: var(--font-weight-bold) var(--font-size-h1) / var(--font-line-height-h1) var(--title-font-family);
-$font-h2: var(--font-weight-bold) var(--font-size-h2) / var(--font-line-height-h2) var(--title-font-family);
-$font-h3: var(--font-weight-light) var(--font-size-h3) / var(--font-line-height-h3) var(--title-font-family);
-$font-h4: var(--font-weight-bold) var(--font-size-h4) / var(--font-line-height-h4) var(--title-font-family);
-$font-h5: var(--font-weight-bold) var(--font-size-h5) / var(--font-line-height-h5) var(--font-family);
-$font-general-label: var(--font-weight-normal) var(--font-size-general-label) / var(--font-line-height-general-label)
-  var(--font-family);
-$font-paragraph: var(--font-weight-normal) var(--font-size-paragraph) / var(--font-line-height-paragraph)
-  var(--font-family);
-$font-subtext: var(--font-weight-normal) var(--font-size-subtext) / var(--font-line-height-subtext) var(--font-family);
+// Letter spacing definition per semantics atom definitions
+$letter-spacing-h1-bold: -0.2%;
+$letter-spacing-h1-normal: -0.4%;
+$letter-spacing-h1-light: -1.5%;
+$letter-spacing-h2-bold: -0.1%;
+$letter-spacing-h2-normal: -0.5%;
+$letter-spacing-h2-light: -0.8%;
+$letter-spacing-h3-bold: -0.5%;
+$letter-spacing-h3-normal: -0.5%;
+$letter-spacing-h3-light: -0.5%;
