--- a/src/components/Text/__stories__/Text.stories.module.scss
+++ b/src/components/Text/__stories__/Text.stories.module.scss
@@ -1,5 +1,15 @@
 @import "../../../styles/themes.scss";
 
-.text {
+@mixin color-rectangle-example {
+  width: 150px;
+  padding: var(--spacing-small);
+}
+.primaryBackground {
+  @include color-rectangle-example;
+  background-color: var(--primary-color);
+}
 
+.invertedBackground {
+  @include color-rectangle-example;
+  background-color: var(--inverted-color-background);
 }
