New names and fixes in typography tokens (#204)
* add new tokens for typography

* fix recommendation to use

* undo automatic linter

* fix variables

* code review notes and classes layer

* fix classes creation

* fix tests

* wip

* wip

* fixes

* fixes

--- a/src/config/maps/core/_core-typography-map.scss
+++ b/src/config/maps/core/_core-typography-map.scss
@@ -13,10 +13,10 @@ $core-typography-fonts-map: (
   font-h3-bold: $font-h3-bold,
   font-h3-normal: $font-h3-normal,
   font-h3-light: $font-h3-light,
-  font-text1-bold: $font-text1-bold,
-  font-text1-normal: $font-text1-normal,
-  font-text2-bold: $font-text2-bold,
-  font-text2-normal: $font-text2-normal
+  font-text-medium-bold: $font-text-medium-bold,
+  font-text-medium-normal: $font-text-medium-normal,
+  font-text-small-bold: $font-text-small-bold,
+  font-text-small-normal: $font-text-small-normal
 );
 
 $core-typography-letter-spacing-map: (
