--- a/src/components/Typography/Typography.module.scss
+++ b/src/components/Typography/Typography.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/typography";
 @import "../../styles/states";
 
-.text {
+.typography {
   a {
     text-decoration: none;
     color: var(--link-color);
