--- a/src/components/Title/__stories__/Title.stories.module.scss
+++ b/src/components/Title/__stories__/Title.stories.module.scss
@@ -1,5 +1,15 @@
 @import "../../../styles/themes.scss";
 
-.title {
+@mixin color-rectangle-example {
+  width: 400px;
+  padding: var(--spacing-small);
+}
+.primaryBackground {
+  @include color-rectangle-example;
+  background-color: var(--primary-color);
+}
 
+.invertedBackground {
+  @include color-rectangle-example;
+  background-color: var(--inverted-color-background);
 }
