--- a/src/components/Typography/Typography.module.scss
+++ b/src/components/Typography/Typography.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/themes.scss";
+@import "../../styles/themes";
 @import "../../styles/typography";
 @import "../../styles/states";
 
