--- a/src/components/Modal/ModalHeader/ModalHeader.module.scss
+++ b/src/components/Modal/ModalHeader/ModalHeader.module.scss
@@ -20,7 +20,7 @@
   }
 
   .description {
-    font: var(--font-subtext);
+    font: var(--font-text-small-normal);
     color: var(--primary-text-color);
     margin-block-start: var(--spacing-small);
   }
