--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -83,7 +83,7 @@ $small-empty-state-height: 12px;
   display: -webkit-box;
   -webkit-line-clamp: $lines;
   -webkit-box-orient: vertical;
-  white-space: initial;
+  white-space: initial; // doesn't work with white-space: no-wrap
 }
 
 @mixin heading-padding {
