--- a/src/components/Typography/Typography.module.scss
+++ b/src/components/Typography/Typography.module.scss
@@ -23,6 +23,9 @@
 
   &.onPrimary {
     color: var(--text-color-on-primary);
+    a {
+      color: var(--text-color-on-primary);
+    }
   }
 
   &.onInverted {
