code review fixes

--- a/src/components/Typography/Typography.module.scss
+++ b/src/components/Typography/Typography.module.scss
@@ -25,11 +25,16 @@
     color: var(--text-color-on-primary);
     a {
       color: var(--text-color-on-primary);
+      text-decoration: underline;
     }
   }
 
   &.onInverted {
     color: var(--text-color-on-inverted);
+    a {
+      color: var(--text-color-on-inverted);
+      text-decoration: underline;
+    }
   }
 
   &.start {
