--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -7,6 +7,9 @@
   border-radius: $border-radius-small;
   min-width: 0;
   @include heading-padding();
+  /**
+  Legacy heading contains the browser default heading margin and removing it will be a breaking change
+  */
   margin: revert;
 }
 
