fix design review notes

--- a/src/components/Typography/Typography.module.scss
+++ b/src/components/Typography/Typography.module.scss
@@ -56,4 +56,8 @@
   &.multiLineEllipsis {
     @include line-clamp(var(--text-clamp-lines));
   }
+
+  &:disabled, &[aria-disabled="true"]  {
+    color: var(--disabled-text-color);
+  }
 }
