fix: MultiStepIndicator - fix divider to now squeeze bullets

--- a/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.module.scss
+++ b/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.module.scss
@@ -88,7 +88,7 @@
   @include theme-prop(background-color, ui-border-color);
   margin: 16px 0 16px 16px;
   height: 1px;
-  flex-grow: 1;
+  flex: 1 1 0;
 }
 
 .sizeCompactNumberDividerContainer {
