--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -2,6 +2,9 @@
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
 
+@include create-title-classes;
+@include create-text-classes;
+
 .headingComponent {
   border: 1px solid transparent;
   border-radius: $border-radius-small;
@@ -10,7 +13,7 @@
   /**
   Legacy heading contains the browser default heading margin and removing it will be a breaking change
   */
-  margin: revert;
+  margin: revert !important;
 }
 
 .headingComponent.multiLineEllipsis {
@@ -30,6 +33,40 @@
 }
 
 /* Override tags styles */
+
+.elementTypeH1 {
+  @include vibe-title("h1", "normal");
+}
+
+.elementTypeH2.sizeLarge,
+.elementTypeH1.sizeSmall,
+.elementTypeH1.sizeMedium {
+  @include vibe-title("h2", "normal");
+}
+
+.elementTypeH3.sizeLarge {
+  @include vibe-title("h2", "light");
+}
+
+.elementTypeH2.sizeSmall,
+.elementTypeH2.sizeMedium,
+.elementTypeH3.sizeSmall,
+.elementTypeH3.sizeMedium,
+.elementTypeH4 {
+  @include vibe-title("h3", "normal");
+}
+
+.elementTypeH5, .elementTypeP {
+  @include vibe-text("medium", "normal");
+}
+
+.elementTypeH6 {
+  @include vibe-text("small", "normal");
+}
+
+.elementTypeSmall {
+  @include font-caption();
+}
 
 .elementTypeLink {
   text-decoration: none;
